--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "antd-password-input-strength": "^1.1.1",
     "apollo-upload-client": "^14.1.3",
     "bootstrap": "^4.4.1",
+    "enzyme-adapter-react-16": "^1.15.5",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.15",
@@ -24,6 +25,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "subscriptions-transport-ws": "^0.9.18"
   },
