--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "antd-password-input-strength": "^1.1.1",
     "apollo-upload-client": "^14.1.3",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.4",
     "enzyme-adapter-react-16": "^1.15.5",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.0.0-beta.2",
@@ -20,6 +21,7 @@
     "query-string": "^6.13.7",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.8.5",
     "react-redux": "^7.2.2",
     "react-router": "^5.1.2",
